# mucoll-sandbox

./: .gitignore  .gitmodules  README.md  setup-env.sh
analysis/: README.md
analysis/cpp/: CMakeLists.txt  README.md
analysis/cpp/src/: make-histograms-loop.cpp  make-histograms.cpp
analysis/pyroot/: make_plots.py
analysis/root_example/: CMakeLists.txt  root_example.cpp
analysis/uproot_example/: plot_pv.py
mucoll_config/generation/: muon-gun-simple.py
mucoll_config/reconstruction/: lctuple-mugun-pv.xml  reco-mugun-pv-nocalo.xml  reco-mugun-pv.xml
mucoll_config/reconstruction/config_files/: Calo.xml  GearOutput_slim.xml  PVReco.xml
mucoll_config/reconstruction/config_files/PandoraSettings/: PandoraSettingsDefault.xml
mucoll_config/simulation/: muon_gun_sim_steer.py  sim_steer_muonGun_MuColl_v1.py
mucoll_config/simulation/detector-simulation/geometries/MuColl_v1_noCalo/: MuColl_v1.xml
muon_gun/: README.md
muon_gun/reco/: lctuple-mugun-pv.xml  reco-mugun-pv-nocalo.xml  reco-mugun-pv.xml
muon_gun/reco/config_files/: GearOutput.xml  InitDD4hep.xml  MarlinPandoraPFA.xml  Monitoring_noCalo.xml  PVReco.xml  Tracking.xml
muon_gun/run/: ntuples.out  reco.out  sim.out
muon_gun/sim/: muon_gun_sim_steer.py
muon_gun/sim/detector-simulation/geometries/MuColl_v1_noCalo/: MuColl_v1.xml
muon_gun/steering_files/: lctuple.xml  lctuple2.xml  lctuple_steer2.xml  muon_gun_hits_reco_steer.xml  muon_gun_sim_steer.py  muon_gun_tracks_reco_steer.xml  reco_steer.xml  reco_steer_vtx.xml
